--- a/style.css
+++ b/style.css
@@ -9,4 +9,6 @@
 html, body{
     height: 100%;
     width: 100%;
+    font-family: "Montserrat",sans-serif;
+    background-color: rgb(211, 210, 210);
 }
