(finalizando os comentarios)

--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ html, body{
     height: 100%;
     width: 100%;
     font-family: "Montserrat",sans-serif;
-    background-color: rgb(211, 210, 210);
+    background-color: #f5f5f5;
 }
