--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,16 +6,15 @@
     margin: auto;
 }
 
-/*Titulos das areas*/
+/*=====Barra do lado dos titulos=====*/
 .container .titulos-tema {
     display: flex;
     flex-direction: row;
     align-items: center;
     font-size: 25px;
-    margin-top: 20px;
+    margin-top: 25px;
     text-transform: uppercase;
 }
-
 /*Borda do lado dos titulos*/
 .container .titulos-tema .color{
     height: 4.5px;
@@ -24,57 +23,78 @@
     margin-left: 5px;
 }
 
+
+/*===manipula a div: Moda===*/
+/*Div moda*/
+.container .div-moda{    
+    margin: 20px 0px 30px 0px;
+    background-color: #d6e3f4;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 22px;
+}
+/*Tamanho da div para imagem*/
+.container .div-moda .img-moda{
+    width: 50%;
+}
+/*Tamanho do elemento img*/
+.container .div-moda .img-moda img{
+    max-width: 100%;
+    max-height: 100%;
+}
+/*Texto da div moda*/
+.container .div-moda .txt-moda{
+    width: 50%;
+    padding: 0px 10px 0px 10px;
+}
+.container .div-moda .txt-moda h2{
+    padding: 0px 0px 20px 0px;
+}
+
+/*=====Manipula a div: night=====*/
 /*Faz as materias ficarem uma do lado da outra*/
 .container .infos{
     display: flex;
     flex-direction: row;
     overflow: hidden;
 }
-
 /*Controla o tamanho e as margens das materias*/
 .container .infos .dicas-fernando {
     width: 20%;
     flex-grow: 1;
-    margin: 10px 15px 55px 15px;
+    margin: 20px 15px -45px 15px;
 }
-
 /*Define o tamanho da div img e não deixa a imagem sair da div*/
 .container .infos .dicas-fernando .imgs{
     overflow: hidden;
     width: 100%;
     height: 100%;
 }
-
-/*Class para as imagens do primeiro tema*/
+/*Class para as imagens*/
 .container .infos .dicas-fernando .imgs .imgs-inicio{
     width: 130%;
     height: 80%;
 }
-
+.container .infos .dicas-fernando .imgs #rio{
+    width: 145%;
+    height: 80%;
+}
 /*Estiliza o subtitulo dentro da imagem*/
 .container .infos .dicas-fernando .imgs .subtitulo-txt{
-    font-size: 30px;
+    font-size: 25px;
     margin: 5px;
     position: relative;
-    bottom: 80px;
+    bottom: 115px;
     color: white;
     opacity: 0.7;
 }
-
-/*Estiliza o subtitulo dentro da imagem*/
+/*hover para o texto*/
 .container .infos .dicas-fernando .imgs .subtitulo-txt:hover{
     transition-duration: 0.7s;
     opacity: 1;
     cursor: pointer;
 }
-
-/*Texto das materias*/
-.container .infos .dicas-fernando .txt{
-    height: 18%;
-    font-size: 18px;
-    margin-top: -65px;
-}
-
 /*Mostra o nome do autor da materia*/
 .container .infos .autor{
     font-size: 10px;
@@ -83,63 +103,32 @@
     margin-top: 10px;
 }
 
-/*Div do meio*/
-.container .div-meio{    
-    margin-top: 15px;
-    background-color: lightsteelblue;
-    display: flex;
-    align-items: center;
-    text-align: center;
-}
 
-/*Tamanho da div para imagem no meio*/
-.container .div-meio .img-meio{
-    width: 50%;
-}
-
-/*Tamanho do elemento img*/
-.container .div-meio .img-meio img{
-    max-width: 100%;
-    max-height: 100%;
-}
-
-/*Texto da div meio*/
-.container .div-meio .txt-meio{
-    width: 50%;
-    padding: 0px 10px 0px 10px;
-}
-
-/*Coloca margem nas materias pequenas*/
+/*=====Manipula as divs: viagens/restaurantes & hoteis=====*/
+/*Coloca margem nas materias*/
 .container .infos2 .dicas-fernando{
+
     flex-grow: 1;
-    margin: 10px 10px 30px 20px;
+    margin: 20px 0px 30px 20px;
 }
 .container .infos2 .dicas-fernando #div-viagens{
     height: auto;
     width: auto;
 }
-
-.container .infos2 .dicas-fernando #div-viagens img{
-    max-height: 60%;
-}
-
 /*Manipula o tamanho da imagem e não a deixa sair da div*/
 .container .infos2 .dicas-fernando .imgs{
     overflow: hidden;
     height:auto;
     width: auto;
 }
-
 /*Tamanho do elemento img*/
 .container .infos2 .dicas-fernando .imgs img{
-    max-width: 80%;
+    max-width: 90%;
 }
-
 /*Subtitulos das materias pequenas*/
 .container .infos2 .dicas-fernando .img .sub2{
     font-size: 10px;
 }
-
 /*Texto das materias pequenas*/
 .container .infos2 .dicas-fernando .txt{
     margin-top: 5px;
